--- a/package.json
+++ b/package.json
@@ -2,15 +2,30 @@
   "name": "jspsych-datamanager",
   "version": "0.0.1",
   "description": "A package to manage data for jsPsych experiments. Currently Firebase and Supabase are supported.",
-  "keywords": ["jspsych", "psychology", "experiments", "data", "firebase", "supabase"],
+  "keywords": [
+    "jspsych",
+    "psychology",
+    "experiments",
+    "data",
+    "firebase",
+    "supabase"
+  ],
   "author": "Rahat Zaman",
   "license": "MIT",
   "packageManager": "pnpm@10.9.0",
-  "workspaces": ["packages/*"],
+  "workspaces": [
+    "packages/*"
+  ],
   "scripts": {
     "build": "pnpm run --filter \"./packages/**\" build",
     "build:core": "pnpm run --filter \"./packages/core\" build",
     "build:firebase": "pnpm run --filter \"./packages/firebase\" build",
-    "build:supabase": "pnpm run --filter \"./packages/supabase\" build"
+    "build:supabase": "pnpm run --filter \"./packages/supabase\" build",
+    "changeset": "changeset",
+    "version": "changeset version",
+    "publish": "pnpm build && changeset publish"
+  },
+  "devDependencies": {
+    "@changesets/cli": "^2.29.2"
   }
 }
