--- a/packages/firebase/package.json
+++ b/packages/firebase/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jspsych-datamanager/firebase",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Firebase integration for jsPsych-datamanager",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
@@ -13,7 +13,7 @@
   "license": "MIT",
   "packageManager": "pnpm@10.9.0",
   "dependencies": {
-    "@jspsych-datamanager/core": "workspace:*",
+    "@jspsych-datamanager/core": "^1.0.0",
     "firebase": "^10.6.0"
   },
   "devDependencies": {
